--- a/html/form-list.html
+++ b/html/form-list.html
@@ -48,6 +48,58 @@
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label"><i class="text-danger">*</i> 标签名称:</label>
+                        <div class="col-sm-3">
+                            <div class="input-group">
+                                <input type="text" class="form-control">
+                                <div class="input-group-addon">元</div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="control-label text-danger">
+                                <div class="pull-left">
+                                    不能为空
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><i class="text-danger">*</i> 复选框:</label>
+                        <div class="col-sm-3">
+                            <label class="checkbox-inline">
+                                <input type="checkbox" value="option1"> 选项1
+                            </label>
+                            <label class="checkbox-inline">
+                                <input type="checkbox" value="option2"> 选项2
+                            </label>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="control-label text-danger">
+                                <div class="pull-left">
+                                    不能为空
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><i class="text-danger">*</i> 单选框:</label>
+                        <div class="col-sm-3">
+                            <label class="checkbox-inline">
+                                <input type="radio" value="option1"> 选项1
+                            </label>
+                            <label class="checkbox-inline">
+                                <input type="radio" value="option2"> 选项2
+                            </label>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="control-label text-danger">
+                                <div class="pull-left">
+                                    不能为空
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><i class="text-danger">*</i> 标签名称:</label>
                         <div class="col-sm-8">
                             <div class="panel panel-default">
                                 <div class="panel-body">
